--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Login</title>
-    <link rel="stylesheet" href="css/login.css">
+    <link rel="stylesheet" href="login.css">
 
 
 </head>
@@ -47,22 +47,18 @@
     };
 
     // Initialize Firebase
-    const firebase = initializeApp(firebaseConfig);
-    //const analytics = getAnalytics(app);
-   
+    const firebase = initializeApp(firebaseConfig);  
+	
 	const loginForm = document.getElementById("login_form");
-const loginButton = document.getElementById("submit");
-const loginErrorMsgEmail = document.getElementById("login-error-msg-email");
-const loginErrorMsgPassword = document.getElementById("login-error-msg-password");
+	const loginButton = document.getElementById("submit");
+	const loginErrorMsgEmail = document.getElementById("login-error-msg-email");
+	const loginErrorMsgPassword = document.getElementById("login-error-msg-password");
 
-
-
-
-loginButton.addEventListener("click", (e) => {
-    e.preventDefault();
-    loginErrorMsgPassword.style.opacity = 0;
-    loginErrorMsgEmail.style.opacity = 0;
-
+	//Listener to the login button that pops up a error message
+	loginButton.addEventListener("click", (e) => {
+		e.preventDefault();
+		loginErrorMsgPassword.style.opacity = 0;
+		loginErrorMsgEmail.style.opacity = 0;
 	const auth = getAuth();
     
 	if (auth.currentUser) {
@@ -75,40 +71,28 @@ loginButton.addEventListener("click", (e) => {
         var emailValidated = validateEmail(email);
         var passwordValidated = validatePassword(password);
         if (!emailValidated) {
-            loginErrorMsgEmail.style.opacity = 1;
+            loginErrorMsgEmail.style.opacity = 1;//Pups up error message
         }
         if (!passwordValidated) {
-            loginErrorMsgPassword.style.opacity = 1;
+            loginErrorMsgPassword.style.opacity = 1;//Pups up error message
         }
 
         if (emailValidated && passwordValidated) {
 			// Sign in with email and pass.
-			//firebase.auth().signInWithEmailAndPassword(email, password).then((userCredential) => {
-			
 			signInWithEmailAndPassword(auth, email, password)
 			.then((userCredential) => {
 				// Signed in 
 				var user = userCredential.user;
-				localStorage.userId = user.uid;
-				location.href = "profile.html";
-				// ...
+				localStorage.userId = user.uid;//Saving the uid of the user that got from the Firebase before directing to the profile page
+				location.href = "profile.html";//Directing to the profile page
 			}).catch(function(error) {
 				// Handle Errors here.
-				//var errorCode = error.code;
-				//var errorMessage = error.message;
-				//if (errorCode === 'auth/wrong-password') {
-					alert('Wrong email or password.');
-				//} else {
-				//	alert(errorMessage);
-				//}
+				alert('Wrong email or password.');
 				console.log(error);
-
 			});
         }
-	
-       
     });
-
+		//Function thar check if the user enterd a valid password using regexp
 		function validatePassword(password) {
 			var letterNumber = /^[0-9a-zA-Z]+$/;
 			if (password.match(letterNumber) && password.length >= 6) {
@@ -117,16 +101,11 @@ loginButton.addEventListener("click", (e) => {
 				return false;
 			}
 		}
-
+		//Function thar check if the user enterd a valid email using regexp
 		function validateEmail(email) {
 			const re = /^(([^<>()[\]\\.,;:\s@"]+(\.[^<>()[\]\\.,;:\s@"]+)*)|(".+"))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$/;
 			return re.test(String(email).toLowerCase());
 		}
-
-
    </script>
-
-   
 </body>
-
 </html>
