--- a/profile.html
+++ b/profile.html
@@ -49,7 +49,7 @@
 		logoutButton.addEventListener("click", (e) => {
 			e.preventDefault();
 			localStorage.userId = null;
-			location.href = "login.html";
+			location.href = "index.html";
 		});
  
 		saveButton.addEventListener("click", async function callback(e) {
